// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
.c7 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c6 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 0.0625rem solid;
  border-radius: 50%;
  border-color: #c3c3c3;
  background-color: #ffffff;
  color: #444444;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  opacity: 0;
  background-color: #423b63;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c4:checked + .c5 {
  border-color: #423b63;
}

.c4:checked + .c5::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c2:hover .c5 {
  border-color: #423b63;
}

.c0 + .c1 {
  margin-top: 0.5rem;
}

<Radio
  disabled={false}
  onChange={[Function]}
>
  <Radio__RadioLabel
    disabled={false}
  >
    <Radio__RadioLabelBase
      className="c0"
      disabled={false}
    >
      <label
        className="c0 c1 c2"
        disabled={false}
      >
        <Radio__RadioWrapper>
          <span
            className="c3"
          >
            <Radio__StyledRadio
              disabled={false}
              onChange={[Function]}
            >
              <input
                className="c4"
                disabled={false}
                onChange={[Function]}
                type="radio"
              />
            </Radio__StyledRadio>
            <Radio__RadioInner>
              <span
                className="c5 c6"
              />
            </Radio__RadioInner>
          </span>
        </Radio__RadioWrapper>
        <Space
          px="2"
        >
          <div
            className="c7"
          >
            Radio
          </div>
        </Space>
      </label>
    </Radio__RadioLabelBase>
  </Radio__RadioLabel>
</Radio>
`;

exports[`Radio should render with props disabled 1`] = `
.c7 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c6 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 0.0625rem solid;
  border-radius: 50%;
  border-color: #c3c3c3;
  background-color: #ffffff;
  color: #444444;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  opacity: 0;
  background-color: #423b63;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c4:checked + .c5 {
  border-color: #423b63;
}

.c4:checked + .c5::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c8:hover .c5 {
  border-color: #423b63;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  opacity: 0.5;
}

.c0 + .c1 {
  margin-top: 0.5rem;
}

<Radio
  disabled={true}
  onChange={[Function]}
>
  <Radio__RadioLabel
    disabled={true}
  >
    <Radio__RadioLabelBase
      className="c0"
      disabled={true}
    >
      <label
        className="c0 c1 c2"
        disabled={true}
      >
        <Radio__RadioWrapper>
          <span
            className="c3"
          >
            <Radio__StyledRadio
              disabled={true}
              onChange={[Function]}
            >
              <input
                className="c4"
                disabled={true}
                onChange={[Function]}
                type="radio"
              />
            </Radio__StyledRadio>
            <Radio__RadioInner>
              <span
                className="c5 c6"
              />
            </Radio__RadioInner>
          </span>
        </Radio__RadioWrapper>
        <Space
          px="2"
        >
          <div
            className="c7"
          >
            Radio
          </div>
        </Space>
      </label>
    </Radio__RadioLabelBase>
  </Radio__RadioLabel>
</Radio>
`;
